--- a/src/app/[locale]/work/projects/en/B2C-Customers.mdx
+++ b/src/app/[locale]/work/projects/en/B2C-Customers.mdx
@@ -1,37 +1,34 @@
 ---
-title: "Transforming Kinetic Solutions LLC"
+title: "A Web-Based Marketplace Platform for B2C Customers"
 publishedAt: "2024-08-08"
 summary: "Kinetic Solutions LLC's website was redesigned using Bootstrap, HTML, CSS, and JavaScript to create a modern, responsive digital experience. The redesign aimed to improve usability, enhance visual appeal, and ensure accessibility across all devices. By leveraging Bootstrap's responsive grid system, custom CSS for branding, and JavaScript for dynamic elements, the new site effectively showcases Kinetic Solutions' services while offering an engaging user journey."
 images:
-  - "/images/projects/project-01/kinetic-solutions/ks1.jpg"
-  - "/images/projects/project-01/kinetic-solutions/ks2.jpg"
-  - "/images/projects/project-01/kinetic-solutions/ks3.jpg"
-  - "/images/projects/project-01/kinetic-solutions/ks4.jpg"
-  - "/images/projects/project-01/kinetic-solutions/ks5.jpg"
-  - "/images/projects/project-01/kinetic-solutions/ks6.jpg"
-  - "/images/projects/project-01/kinetic-solutions/ks7.jpg"
-  - "/images/projects/project-01/kinetic-solutions/ks8.jpg"
+  - "/images/projects/work-01/1.webp"
+  - "/images/projects/work-01/2.webp"
+  - "/images/projects/work-01/3.webp"
+  - "/images/projects/work-01/4.webp"
+  - "/images/projects/work-01/5.webp"
+  - "/images/projects/work-01/6.webp"
+  - "/images/projects/work-01/7.webp"
+
 team:
   - name: "Dustin Moore"
     role: "Web Developer"
-    avatar: "/images/fam.png"
+    avatar: "/images/photo.jpg"
     linkedIn: "https://www.linkedin.com/in/dustinmmoore"
 ---
-#### Background
 
-Kinetic Solutions LLC is dedicated to providing hands-on training to civilians, law enforcement, and military personnel, focusing on practical skills for safety in complex situations. The previous website served its purpose but lacked modern design elements and responsiveness that could elevate user experience and accessibility across all devices.
+#### About a Project
 
-The objective of the redesign was to create a streamlined, engaging digital experience that effectively showcases Kinetic Solutions' services, communicates their core mission, and drives interaction with prospective clients.
+Our customer is a US company wanting to unite buyers and merchants in a digital environment. Despite the vast experience in e-commerce, the customer decided not to build a web marketplace on its own and turn to experts. The company needed a technical partner to develop a custom solution and define the proper MVP in increase the ROI.
 
 #### Project Goals
 
-**Improved Responsiveness:** Ensure a seamless experience across all devices, particularly mobile and tablet, by leveraging Bootstrap's grid system.
+➤ Define the proper MVP scope and provide the customer with tech consulting to use the fudns allocated for marketplace development properly
 
-**Modern Design Aesthetic:** Update the website's look and feel to align with modern web design trends, incorporating a clean, sleek interface that enhances credibility and professionalism.
+➤ Develop an extended MVP that would be an elegant and eye-catching response to competitors and preferred choice for marketplaces' merchants and buyers
 
-**Enhanced Navigation:** Simplify navigation to make it easier for visitors to explore Kinetic Solutions' offerings and find relevant information.
-
-**Optimized Performance:** Maintain efficient loading times and accessibility standards.
+➤ Provide the customer with further technical consulting and support to keep the marketplace competitive and attract the broader user audience in a long-term run
 
 #### Technologies Used
 
@@ -89,5 +86,6 @@ The redesigned Kinetic Solutions LLC website achieved its primary goals: a moder
 
 Moving forward, we plan to implement further optimizations, such as additional interactive content like training videos and testimonials to improve engagement and conversion rates.
 
-#### Check out the demo: 
+#### Check out the demo:
+
 [https://kineticsolutionsllc.vercel.app/](https://kineticsolutionsllc.vercel.app/)
