Update: Work History 01 and 02

--- a/src/app/[locale]/work/projects/en/Food-Ordering-And-POS.mdx
+++ b/src/app/[locale]/work/projects/en/Food-Ordering-And-POS.mdx
@@ -1,21 +1,10 @@
 ---
-title: "A Web-Based Marketplace Platform for B2C Customers"
-publishedAt: "2024-08-08"
-summary: "A web software solution and a cross-platform mobile application for a marketplace working in the US and European area"
+title: "All-in-One Food Ordering and POS App | RealSpice"
+publishedAt: "2024-07-08"
+summary: "A web software solution and a cross-platform mobile application for a Food Deliver working in the US and European area"
 images:
-  - "/images/projects/work-01/1.webp"
-  - "/images/projects/work-01/2.webp"
-  - "/images/projects/work-01/3.webp"
-  - "/images/projects/work-01/4.webp"
-  - "/images/projects/work-01/5.webp"
-  - "/images/projects/work-01/6.webp"
-  - "/images/projects/work-01/7.webp"
-
-team:
-  - name: "Dustin Moore"
-    role: "Web Developer"
-    avatar: "/images/photo.jpg"
-    linkedIn: "https://www.linkedin.com/in/dustinmmoore"
+  - "/images/projects/work-02/0.webp"
+  - "/images/projects/work-02/1.webp"
 ---
 
 #### About a Project
